2.0 Embedded functional interfaces.